--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,10 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://Alecks131.github.io/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
-theme = 'blowfish'
+theme = 'reimu'
+[params]
+    math = true
+    mermaid = true
+
+[markup.goldmark.renderer]
+    unsafe = true
