--- a/hugo.toml
+++ b/hugo.toml
@@ -1,19 +1,76 @@
-baseURL = 'https://alecks131.github.io/'
-languageCode = 'en-us'
-title = 'Under a Glassy Sky'
-theme = 'lofi-code'
-math.enable = true
+baseURL = "https://example.com"
+languageCode = "en-us"
+title = "LofiCode Hugo Theme"
+theme = "loficode-hugo-theme"
 
-[params.math]
-  mathjax = true 
-  mermaid = true
+# Enable emoji support
+enableEmoji = true
 
-[[params.social]]
-  name = "GitHub"
-  icon = "fab fa-github"
-  link = "https://github.com/your-username"
+# Output formats for SPA functionality
+[outputs]
+  home = ["HTML", "JSON", "pages"]
+  page = ["HTML"]
+  section = ["HTML"]
 
-[[params.social]]
-  name = "LinkedIn"
-  icon = "fab fa-linkedin"
-  link = "https://linkedin.com/in/your-username"  
+# Custom output formats
+[outputFormats]
+  [outputFormats.JSON]
+    mediaType = "application/json"
+    baseName = "index"
+    isPlainText = true
+  [outputFormats.pages]
+    mediaType = "application/json"
+    baseName = "pages"
+    isPlainText = true
+
+# Pagination
+[pagination]
+  pagerSize = 6
+  path = "page"
+
+[params]
+  description = "A cozy example site showcasing the LofiCode Hugo theme"
+  tagline = "Coding with coffee and lo-fi beats ☕🎵"
+
+  # Profile section
+  [params.author]
+    name = "LofiCode Dev"
+    image = "images/profile.png"
+
+  # Social links - Supported platforms: github, twitter, linkedin, email, mastodon, youtube, instagram, facebook
+  [params.social]
+    github = "https://github.com/example"
+    twitter = "https://twitter.com/example"
+    # linkedin = "https://linkedin.com/in/example"
+    # email = "contact@example.com"
+    # mastodon = "https://mastodon.social/@example"
+    # youtube = "https://youtube.com/@example"
+    # instagram = "https://instagram.com/example"
+    # facebook = "https://facebook.com/example"
+
+# Main navigation menu
+[[menu.main]]
+  name = "About"
+  url = "/about/"
+  weight = 10
+
+[[menu.main]]
+  name = "Contact"
+  url = "/contact/"
+  weight = 20
+
+# Markup configuration for syntax highlighting
+[markup]
+  [markup.highlight]
+    style = "dracula"
+    lineNos = true
+    lineNumbersInTable = false
+    tabWidth = 2
+    noClasses = false
+
+# Taxonomies
+[taxonomies]
+  tag = "tags"
+  category = "categories"
+
+
