--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = "https://example.com"
 languageCode = "en-us"
 title = "LofiCode Hugo Theme"
-theme = "loficode"
+theme = "loficode-hugo-theme"
 
 # Enable emoji support
 enableEmoji = true
@@ -72,5 +72,3 @@ enableEmoji = true
 [taxonomies]
   tag = "tags"
   category = "categories"
-
-
